[package]
name = "peekaboo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging and global settings.
log = "0.4"
log4rs = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4"
image = "0.23"
ring = "0.16.20"

# UI related.
actix-web = "4.4.0"
actix-files = "0.6.5"
