[package]
name = "peekaboo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging and global settings.
log = "0.4"
log4rs = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
lazy_static = "1.4"
image = "0.23"
ring = "0.16.20"
futures = "0.3"
futures-util = "0.3"
sanitize-filename = "0.3"
tokio = { version = "1.38.0", features = ["full"] }
chrono = "0.4"

# UI related.
actix-web = "4.4.0"
actix-multipart = "0.4"
actix-files = "0.6.5"
